--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="replyContainer" onclick="copyToClipboard('reply19')">
             <div class="replyText" id="reply19" data-title="Divan Bed Video" data-message="Divan Bed Instructions<br>Connect your base<br>https://youtube.com/shorts/aa5sCmzopN0<br>Connect headboard to a base<br>https://youtube.com/shorts/1ytMxUOiZVE<br>Locate the headboard threads on your base<br>https://youtube.com/shorts/T7dN1WbsdR8.<br>Ottoman Bed Instructions<br>https://youtu.be/Uj4hE11gpeg.">Divan Bed Video</div>
         </div>
-        <div class="replyContainer" onclick="copyToClipboard('reply20')">
+        <div class="replyContainer" onclick="copyToClipboard('reply1=20')">
             <div class="replyText" id="reply20" data-title="Whats App Team" data-message="Our Support team WhatsApp number is +923013777525.">Whats App Team</div>
         </div>
 
